# devcontainer-sync-cli

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: WORKFLOW_TESTING.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/devcontainer-sync-cli/: design.md  requirements.md  tasks.md
.kiro/specs/github-actions-cicd/: design.md  requirements.md  tasks.md
.kiro/steering/: agent.md
src/: config.rs  customizer.rs  error.rs  lib.rs  main.rs  types.rs
src/cli/: mod.rs
src/git/: branch.rs  executor.rs  mod.rs  remote.rs  subtree.rs  validator.rs
tests/: acceptance_tests.rs
