[package]
name = "devcontainer-sync-cli"
version = "1.0.0"
edition = "2021"
authors = ["Daniel Jones <daniel@re-cinq.com>"]
description = "A CLI tool for syncing devcontainer configurations from Claude Code repository"
license = "MIT"

[[bin]]
name = "devcontainer-sync"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"
rstest = "0.18"
spectral = "0.6"
once_cell = "1.19"
proptest = "1.4"
